--- a/oop1.7/templates/navbar.html
+++ b/oop1.7/templates/navbar.html
@@ -17,6 +17,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="showLog.php">show log</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="landmarks.php">Bezienswaardigheden</a>
+            </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Dropdown
